--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'rococo-graduation-project'
 include 'rococo-gateway'
 include 'rococo-auth'
 include 'rococo-userdata'
+include 'rococo-artist'
+
