--- a/rococo-gateway/src/main/resources/application.yaml
+++ b/rococo-gateway/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8080
   error:
     include:
       message: true
@@ -30,6 +30,8 @@ spring:
 
 rococo-userdata:
   base-uri: 'http://127.0.0.1:8089'
+rococo-artist:
+  base-uri: 'http://127.0.0.1:8081'
 rococo-front:
   base-uri: 'http://127.0.0.1:3000'
 
@@ -47,6 +49,8 @@ spring:
 
 rococo-userdata:
   base-uri: 'http://userdata.rococo.dc:8089'
+rococo-artist:
+  base-uri: 'http://artist.rococo.dc:8081'
 rococo-front:
   base-uri: 'http://client.rococo.dc'
 ---
