--- a/rococo-tests/build.gradle
+++ b/rococo-tests/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         allureVersion = '2.21.0'
-        selenideVersion = '6.17.0'
+        selenideVersion = '7.0.4'
     }
 }
 
@@ -81,7 +81,8 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
-    testImplementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // Java 9+ compatibility - Do NOT update to 2.0.0
+    testImplementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
     // Kafka
     testImplementation 'org.apache.kafka:kafka-clients:3.5.0'
     // Wiremock
